blockhound 라이브러리 추가하여 동기 구현 찾기 가능해짐

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
             power of ~Spring Boot.
         </p>
 
-        <h2>Inventory Management</h2>
+        <h2>Inventory Management aa</h2>
         <table>
             <thead>
                 <tr>
